--- a/pom.xml
+++ b/pom.xml
@@ -33,6 +33,19 @@
 			<artifactId>spring-boot-starter-test</artifactId>
 			<scope>test</scope>
 		</dependency>
+
+<!--		Manan's dependencies start-->
+		<dependency>
+			<groupId>com.github.javaparser</groupId>
+			<artifactId>javaparser-core</artifactId>
+			<version>3.22.1</version>
+		</dependency>
+		<dependency>
+			<groupId>com.github.javaparser</groupId>
+			<artifactId>javaparser-symbol-solver-core</artifactId>
+			<version>3.25.8</version> <!-- Use the version matching your existing JavaParser version -->
+		</dependency>
+		<!--		Manan's dependencies end-->
 	</dependencies>
 
 	<build>
